--- a/public/css/developro.css
+++ b/public/css/developro.css
@@ -2,6 +2,17 @@
   border-radius: 10px;
   box-shadow: 0 4px 5px -4px rgba(0, 0, 0, 0.25);
 }
+.list-view__icon {
+  cursor: pointer;
+  opacity: 0.3;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.list-view__icon.active,
+.list-view__icon:hover {
+  opacity: 1;
+}
 /* qTip
 ================================================== */
 .qtip {
@@ -122,5 +133,153 @@
 }
 .qtip-tip.status-4 canvas {
   background: #de8300 !important;
+}
+.offerList:not(.offerList-grid) .apartment-box {
+  width: calc(100% - 44px);
+}
+.offer-list-box {
+  background: #fff;
+  padding: 10px 30px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  box-shadow: 0 4px 5px -4px rgba(0, 0, 0, 0.25);
+}
+.offer-list-box .apartment-box__name p {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+.offer-list-box .apartment-box__name {
+  position: relative;
+  padding-right: 2.5rem;
+}
+.offer-list-box .apartment-box__name::after {
+  position: absolute;
+  right: 1.5rem;
+  top: 0;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 1px;
+  background: #978c7d;
+}
+.offer-list-box__status-container {
+  border-radius: 5px;
+  color: #fff;
+  text-align: center;
+}
+#offerList.list .offerList-grid {
+  display: none;
+}
+#offerList.grid .offerList-list {
+  display: none;
+}
+.offerList:not(.offerList-grid) .offer-list-box__status-container {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 2rem;
+  height: 100%;
+}
+.offer-list-box__status-container.offer-list-box__status--dostepne {
+  background: #25690c;
+}
+.offer-list-box__status-container.offer-list-box__status--sprzedane {
+  background: #aa1215;
+}
+.offer-list-box__status-container.offer-list-box__status--rezerwacja {
+  background: #f19800;
+}
+.offerList:not(.offerList-grid) .offer-list-box__status-container .offer-list-box__status {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 12px;
+}
+.offerList:not(.offerList-grid) .offer-list-box__status-container .offer-list-box__status span {
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(90deg);
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(90deg);
+  transform: translateX(-50%) translateY(-50%) rotate(90deg);
+  display: block;
+  text-transform: uppercase;
+}
+.offerList.offerList-grid .offer-list-box__status-container .offer-list-box__status span {
+  display: inline-block;
+  font-size: 0.625rem;
+  text-transform: uppercase;
+  padding: 0.2rem 0;
+}
+.apartment-desc .offer-list-box__status-container {
+  display: inline-block;
+  padding: 0.2rem 1em;
+  min-width: 14rem;
+  margin-bottom: 1rem;
+}
+.apartment-desc .offer-list-box__status-container .offer-list-box__status span {
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+.offerList.offerList-grid .offer-list-box .apartment-box__name {
+  padding-right: 0;
+}
+.offerList.offerList-grid .offer-list-box .apartment-box__name p {
+  font-size: 1.25rem;
+}
+.offerList.offerList-grid .offer-list-box .apartment-box__name::after {
+  display: none;
+}
+.offerList.offerList-grid .apartment-box__details p {
+  font-size: 13px;
+}
+.offerList.offerList-grid .offer-list-box .project-link {
+  font-size: 0.875rem;
+}
+.offerList.offerList-grid .offer-list-box .project-link::after {
+  border: solid var(--background-color-main);
+  border-width: 0 1px 1px 0;
+  margin-left: 0.5rem;
+}
+.offerList.offerList-grid .offer-list-box .project-link:hover::after {
+  border: solid var(--text-color-main);
+  border-width: 0 1px 1px 0;
+}
+.apartment-box__img_wrapper {
+  aspect-ratio: 160/113;
+  margin-bottom: 1rem;
+}
+.offerList.offerList-grid .apartment-box__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  margin-bottom: 0;
+}
+.offerList.offerList-grid .apartment-box {
+  padding-top: 1rem;
+}
+.apartment-box__details .col-sm-4:nth-child(2) {
+  position: relative;
+}
+.apartment-box__details .col-sm-4:nth-child(2)::before {
+  position: absolute;
+  left: 0.75rem;
+  top: 0;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 1px;
+  background: #978c7d;
+}
+.apartment-box__details .col-sm-4:nth-child(2)::after {
+  position: absolute;
+  right: 0.75rem;
+  top: 0;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 1px;
+  background: #978c7d;
+}
+.line-normal {
+  padding: 10px 0;
+  border-bottom: 1px solid #f0e7db;
 }
 /*# sourceMappingURL=developro.css.map */
