--- a/public/css/style.css
+++ b/public/css/style.css
@@ -612,29 +612,31 @@ button:focus,
   font-style: normal;
   font-size: 39px;
   font-weight: 600;
+  line-height: 40px;
 }
 .carousel-room-item h2 a {
   color: white;
 }
 .carousel-room-item ul {
-  display: flex;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 .carousel-room-item ul li {
-  flex: fit-content;
+  width: 100%;
   font-family: "MuseoModerno", sans-serif;
   font-style: normal;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   color: white;
-  text-align: center;
+  text-align: left;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  display: flex;
 }
 .carousel-room-item ul li span {
-  display: block;
-  width: 1px;
-  background: rgba(255, 255, 255, 0.4);
-  height: 20px;
-  margin: auto;
+  margin-left: auto;
+  font-weight: 600;
+}
+.carousel-room-item ul li:last-child {
+  border-bottom: 0;
 }
 /* Contact form
 ================================================== */
