--- a/public/css/developro.css
+++ b/public/css/developro.css
@@ -1,80 +1,10 @@
-#floorplan-holder img {
-  border-radius: 10px;
-  box-shadow: 0 4px 5px -4px rgba(0, 0, 0, 0.25);
+.apartment-details p {
+  text-align: center;
+  font-weight: bold;
 }
-.list-view__icon {
-  cursor: pointer;
-  opacity: 0.3;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.list-view__icon.active,
-.list-view__icon:hover {
-  opacity: 1;
-}
-/* qTip
-================================================== */
-.qtip {
-  position: absolute;
-  left: -28000px;
-  top: -28000px;
-  display: none;
-  width: 190px;
-  box-shadow: none;
-}
-.qtip .qtip-content {
-  position: relative;
-  overflow: hidden;
-  text-align: left;
-  word-wrap: break-word;
-  color: white !important;
-  font-size: 14px !important;
-  line-height: 19px;
-  padding: 10px 10px;
-  border-radius: 3px;
-}
-.qtip .qtip-content b.fr {
-  float: right;
-}
-.qtip .qtip-content h4 {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding-bottom: 10px;
-}
-.qtip .qtip-content h3 {
-  color: #fff;
-  font-weight: 600;
-  margin: 0 0 9px 0;
-  font-size: 17px;
-}
-.qtip .qtip-content h6 {
-  font-weight: 600;
-  text-transform: uppercase;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-  padding-top: 9px;
-  margin-top: 9px;
-  margin-bottom: 0;
-  font-size: 16px;
-}
-.qtip .qtip-content hr {
-  margin: 10px 0 7px;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
-.qtip .qtip-content li {
-  border-bottom: 1px solid #3f3f3f;
-  padding: 3px 0;
-  font-weight: 300;
-}
-.qtip .qtip-content li b {
-  font-weight: 600;
-}
-.qtip .qtip-content .floor-stats {
-  font-size: 13px;
-  line-height: normal;
-  text-align: left;
-}
-.qtip .qtip-content .floor-stats span {
-  float: right;
+.apartment-details-middle {
+  border-left: 1px solid #978c7d;
+  border-right: 1px solid #978c7d;
 }
 .qtip-default .qtip-content {
   border-width: 1px;
