--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1386,6 +1386,15 @@ footer li a {
     line-height: 12px;
     margin-top: 6px;
   }
+  .apartment-details .col-12 {
+    border-bottom: 1px solid #978c7d;
+    border-right: 0;
+    border-left: 0;
+    padding: 10px 0;
+  }
+  .apartment-details .col-12:last-child {
+    border-bottom: 0;
+  }
 }
 /* end of 575.98 */
 /*# sourceMappingURL=style.css.map */
