--- a/public/css/style.css
+++ b/public/css/style.css
@@ -997,6 +997,7 @@ header li ul {
   width: 220px;
   padding: 10px 15px !important;
   display: none;
+  z-index: 99;
 }
 header li ul li {
   padding: 0;
